[1.397] sync - faq/faq14.html

--- a/faq/faq14.html
+++ b/faq/faq14.html
@@ -541,6 +541,8 @@ $ <b>man -k -s 8 mount</b>
 
 <p>
 Настройка диска может варьироваться от платформы к платформе.
+Обратите внимание, что в настоящее время
+«стекирование» режимов softraid <b>не поддерживается</b>.
 
 <h3 id="softraidDI">Установка на зеркальную пару дисков (RAID 1)</h3>
 
@@ -685,9 +687,7 @@ sd2: 10244MB, 512 bytes/sec, 20980362 sec total
 <a href="https://man.openbsd.org/softraid">softraid(4)</a> и программа
 <a href="https://man.openbsd.org/bioctl">bioctl(8)</a>.
 В этом разделе описан пример установки OpenBSD на один зашифрованный диск. Этот
-процесс очень похож на предыдущий. Обратите внимание, что в настоящее время
-«стекирование» режимов softraid <b>не поддерживается</b>.
-<!-- XXXrelease - mention RAID1C when booting support is added -->
+процесс очень похож на предыдущий.
 
 <p>
 Выберете <code>(S)hell</code> во время установки чтобы перейти в консоль.
