adding link to Sergey Bronnikov's blog

--- a/ru-community/articles.html
+++ b/ru-community/articles.html
@@ -31,6 +31,9 @@ OpenBSD. Это ни в коем случае не официальная док
 
       <li><a href="https://lvee.org/ru/abstracts/175">
           OpenBSD 5.8 & 5.9</a>
+
+      <li><a href="https://bronevichok.ru/tags/openbsd.html">
+          Блог Сергея Бронникова (посты с тегом #openbsd)</a>
     </ul>
 
 
