--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,8 +40,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.6.1-relnotes.txt">LibreSSL 3.6.1</a>
-вышла 31 октября 2022 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.6.2-relnotes.txt">LibreSSL 3.6.2</a>
+вышла 7 февраля 2023 года
 
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
@@ -57,8 +57,8 @@ LibreSSL представляет из себя криптографически
 для других ОС (Linux, FreeBSD, Windows, и.т.д.).
 
 <p>
-Последним stable релизом является 3.6.1<br>
-Последним development релизом является 3.7.0<br>
+Последним stable релизом является 3.6.2<br>
+Последним development релизом является 3.7.1<br>
 Больше информации можно найти на странице
 <a href="releases.html">доступных версий</a>.
 
