--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -493,9 +493,7 @@ vnode при помощи <a href="https://man.openbsd.org/vnconfig">vnconfig(8)
 # <b>vnconfig install72.img</b>
 vnd0
 # <b>mount /dev/vnd0a /mnt</b>
-# <b>cd /mnt</b>
-# <b>fw_update -Fv iwm</b>
-# <b>cd /</b>
+# <b>fw_update -Fv -p/mnt iwm</b>
 # <b>umount /mnt</b>
 # <b>vnconfig -u vnd0</b>
 </pre>
