--- a/rpki-client/index.html
+++ b/rpki-client/index.html
@@ -38,8 +38,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.2.txt">
-rpki-client 8.2</a> вышел 13 декабря 2022 года.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/rpki-client-8.3.txt">
+rpki-client 8.3</a> вышел 19 марта 2023 года.
 
 <p>
 <a href="https://man.openbsd.org/rpki-client">rpki-client</a>
