--- a/security.html
+++ b/security.html
@@ -80,7 +80,8 @@ h3 {
 <a href="https://openbsd.org/errata69.html">6.9</a>,
 <a href="https://openbsd.org/errata70.html">7.0</a>,
 <a href="https://openbsd.org/errata71.html">7.1</a>,
-<a href="https://openbsd.org/errata72.html">7.2</a>.
+<a href="https://openbsd.org/errata72.html">7.2</a>,
+<a href="https://openbsd.org/errata73.html">7.3</a>.
 <br>
 <hr>
 
