[1.135] sync, LibreSSL 3.7.2 - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,8 +40,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.6.2-relnotes.txt">LibreSSL 3.6.2</a>
-вышла 7 февраля 2023 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.7.2-relnotes.txt">LibreSSL 3.7.2</a>
+вышла 8 апреля 2023 года
 
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
