[1.135] sync - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -42,7 +42,7 @@ BCM2837/BCM2711 (Raspberry Pi 3/4) Qualcomm Snapdragon 7x/8x и
 Socionext SCA11.
 
 <p>
-Устновочный образ включает в себя firmware, необходимый для загрузки Pine 64/64+,
+Устновочный образ включает в себя firmware, необходимый для загрузки
 Raspberry Pi 3 и Raspberry Pi 4.
 
 <p>
