[1.66] fix revision version - arm64.html

--- a/arm64.html
+++ b/arm64.html
@@ -21,7 +21,7 @@ arm64
 OpenBSD/arm64 это порт OpenBSD для различных 64-битных ARM-систем.
 
 <p>
-Почтовая рассылка, посвященная теме ARM, доступна по адресу
+Почтовая рассылка, посвященная ARM-системам, доступна по адресу
 <a href="mailto:arm@openbsd.org">arm@openbsd.org</a>.
 Для того чтобы подписаться на эту почтовую рассылку, отправьте
 email с текстом в теле письма <b>"subscribe arm"</b> на адрес
