[1.69] fix broken link - openssh/security.html

--- a/openssh/security.html
+++ b/openssh/security.html
@@ -47,7 +47,7 @@ OpenSSH разрабатывается по тем же принципам и т
 	This bug is corrected in OpenSSH 9.2.
     <br>
     For more information, please refer to the
-    <a href="txt/release-9.2">release notes</a>.
+    <a href="https://www.openssh.com/txt/release-9.2">release notes</a>.
 
 <li><p><b>February 2, 2023</b><br>
     ssh(1) in OpenSSH between and 8.7 and 9.1 (inclusive).
@@ -62,7 +62,7 @@ OpenSSH разрабатывается по тем же принципам и т
 	This bug is corrected in OpenSSH 9.2.
     <br>
     For more information, please refer to the
-    <a href="txt/release-9.2">release notes</a>.
+    <a href="https://www.openssh.com/txt/release-9.2">release notes</a>.
 
 <li><p><b>February 2, 2023</b><br>
     ssh(1) in OpenSSH between and 6.5 and 9.1 (inclusive).
@@ -81,7 +81,7 @@ OpenSSH разрабатывается по тем же принципам и т
 	This bug is corrected in OpenSSH 9.2.
     <br>
     For more information, please refer to the
-    <a href="txt/release-9.2">release notes</a>.
+    <a href="https://www.openssh.com/txt/release-9.2">release notes</a>.
 
 <li><p><b>February 2, 2023</b><br>
     sshd in OpenSSH between and 9.1 (only).
@@ -97,7 +97,7 @@ OpenSSH разрабатывается по тем же принципам и т
 	This bug is corrected in OpenSSH 9.2.
     <br>
     For more information, please refer to the
-    <a href="txt/release-9.2">release notes</a>.
+    <a href="https://www.openssh.com/txt/release-9.2">release notes</a>.
 
 <li><p><b>September 26, 2021</b><br>
     sshd в OpenSSH версиях между 6.2 и 8.7 (включительно).
@@ -164,14 +164,14 @@ OpenSSH разрабатывается по тем же принципам и т
     information including under some circumstances, user's private keys.
     This may be mitigated by adding the undocumented config option
     <b>UseRoaming no</b> to ssh_config.<br>
-    For more information see <a
-    href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-0777"
-    >CVE-2016-0777</a> and <a
-    href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-0778"
-    >CVE-2016-0778</a>. <br>
+    For more information see
+    <a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-0777">
+    CVE-2016-0777</a> and
+    <a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2016-0778">
+    CVE-2016-0778</a>. <br>
     This bug is corrected in OpenSSH 7.1p2 and in OpenBSD's stable branch.
-    For more information, please
-    refer to the <a href="https://www.openssh.com/txt/release-7.1p2">release notes</a>.
+    For more information, please refer to the
+    <a href="https://www.openssh.com/txt/release-7.1p2">release notes</a>.
 
 <li><p><b>21 августа 2015</b><br>
     OpenSSH 7.0 contained a logic error in PermitRootLogin=
@@ -179,36 +179,36 @@ OpenSSH разрабатывается по тем же принципам и т
     compile-time configuration, permit password authentication to
     root while preventing other forms of authentication.<br>
     This bug is corrected in OpenSSH 7.1. For more information, please
-    refer to the <a href="https://www.openssh.com/txt/release-7.1">release
-    notes</a>
+    refer to the
+    <a href="https://www.openssh.com/txt/release-7.1">release notes</a>
 
 <li><p><b>11 августа 2015</b><br>
     OpenSSH 6.7 through 6.9 assign weak permissions to TTY devices.<br>
     Keyboard-interactive authentication in OpenSSH prior to 7.0 may
     allow circumvention of MaxAuthTries.<br>
     These bugs are corrected in OpenSSH 7.0. For more information, please
-    refer to the <a href="https://www.openssh.com/txt/release-7.0">release
-    notes</a>
+    refer to the
+    <a href="https://www.openssh.com/txt/release-7.0">release notes</a>
 
 <li><p><b>30 июня 2015</b><br>
     OpenSSH prior to 6.9 suffered from a race condition that could allow
     non-trusted X11 forwarding sessions to be treated as trusted.
-    For more information, please
-    refer to the <a href="https://www.openssh.com/txt/release-6.9">release
-    notes</a>
+    For more information, please refer to the
+    <a href="https://www.openssh.com/txt/release-6.9">release notes</a>
 
 <li><p><b>8 ноября 2013:</b><br>
     OpenSSH versions 6.2 and 6.3 are vulnerable to the memory corruption
     problem described in the
-    <a href="https://www.openssh.com/txt/gcmrekey.adv">gcmrekey.adv</a> advisory
-    and the
+    <a href="https://www.openssh.com/txt/gcmrekey.adv">gcmrekey.adv</a>
+    advisory and the
     <a href="https://www.openssh.com/txt/release-6.4">OpenSSH 6.4 release notes</a>.
 
 <li><p><b>2 февраля 2011:</b><br>
     Portable OpenSSH prior to version 5.8p2 is vulnerable to the local
     host key theft attack described in
-    <a href="https://www.openssh.com/txt/portable-keysign-rand-helper.adv">portable-keysign-rand-helper.adv</a> advisory
-    and the
+    <a href="https://www.openssh.com/txt/portable-keysign-rand-helper.adv">
+    portable-keysign-rand-helper.adv</a>
+    advisory and the
     <a href="https://www.openssh.com/txt/release-5.8p2">OpenSSH 5.8p2 release notes</a>.
 
 <li><p><b>24 января 2011:</b><br>
@@ -219,14 +219,14 @@ OpenSSH разрабатывается по тем же принципам и т
     <a href="https://www.openssh.com/txt/release-5.8">OpenSSH 5.8 release notes</a>.
 
 <li><p><b>23 февраля 2009:</b><br>
-    OpenSSH prior to version 5.2 is vulnerable to the protocol
-     weakness described in
-    <a href="http://www.cpni.gov.uk/Docs/Vulnerability_Advisory_SSH.txt">CPNI-957037 "Plaintext Recovery Attack Against SSH"</a>.
+    OpenSSH prior to version 5.2 is vulnerable to the protocol weakness described in
+    <a href="http://www.cpni.gov.uk/Docs/Vulnerability_Advisory_SSH.txt">
+    CPNI-957037 "Plaintext Recovery Attack Against SSH"</a>.
     However, based on the limited information available it appears that this
     described attack is infeasible in most circumstances. For more
     information please refer to the
-    <a href="https://www.openssh.com/txt/cbc.adv">cbc.adv</a> advisory
-    and the
+    <a href="https://www.openssh.com/txt/cbc.adv">cbc.adv</a>
+    advisory and the
     <a href="https://www.openssh.com/txt/release-5.2">OpenSSH 5.2 release notes</a>.
 
 <li><p><b>22 июля 2008:</b><br>
@@ -235,9 +235,9 @@ OpenSSH разрабатывается по тем же принципам и т
     <a href="https://www.openssh.com/txt/release-5.1">OpenSSH 5.1 release notes</a>.
 
 <li><p><b>3 апреля 2008:</b><br>
-    OpenSSH 5.0 and newer are not vulnerable to the X11 hijacking attack
-    described in
-    <a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2008-1483">CVE-2008-1483</a> and the
+    OpenSSH 5.0 and newer are not vulnerable to the X11 hijacking attack described in
+    <a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2008-1483">CVE-2008-1483</a>
+    and the
     <a href="https://www.openssh.com/txt/release-5.0">OpenSSH 5.0 release notes</a>.
 
 <li><p><b>31 марта 2008:</b><br>
@@ -273,7 +273,8 @@ OpenSSH разрабатывается по тем же принципам и т
 <li><p><b>1 февряля 2006:</b><br>
     OpenSSH 4.3 and newer are not vulnerable to shell metacharacter expansion
     in scp(1) local-local and remote-remote copies
-    (<a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2006-0225">CVE-2006-0225</a>), as described in the
+    (<a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2006-0225">CVE-2006-0225</a>),
+    as described in the
     <a href="https://www.openssh.com/txt/release-4.3">OpenSSH 4.3 release notes</a>.
 
 <li><p><b>1 сентября 2005:</b><br>
@@ -289,14 +290,14 @@ OpenSSH разрабатывается по тем же принципам и т
 <li><p><b>16 сентября 2003:</b><br>
     Portable OpenSSH 3.7.1p2 and newer are not vulnerable to
     "September 23, 2003: Portable OpenSSH Multiple PAM vulnerabilities",
-    <a href="https://www.openssh.com/txt/sshpam.adv">OpenSSH
-    Security Advisory</a>. (This issue does not affect OpenBSD versions)
+    <a href="https://www.openssh.com/txt/sshpam.adv">OpenSSH Security Advisory</a>.
+    (This issue does not affect OpenBSD versions)
 
 <li><p><b>16 сентября 2003:</b><br>
     OpenSSH 3.7.1 and newer are not vulnerable to
     "September 16, 2003: OpenSSH Buffer Management bug",
-    <a href="https://www.openssh.com/txt/buffer.adv">OpenSSH
-    Security Advisory</a> and CERT Advisory
+    <a href="https://www.openssh.com/txt/buffer.adv">OpenSSH Security Advisory</a>
+    and CERT Advisory
     <a href="http://www.cert.org/advisories/CA-2003-24.html">CA-2003-24</a>.
 
 <li><p><b>1 августа 2002:</b><br>
@@ -305,19 +306,20 @@ OpenSSH разрабатывается по тем же принципам и т
     mirroring process to other FTP servers.  The code was inserted
     some time between the 30th and 31th of July.  We replaced the
     trojaned files with their originals at 7AM MDT, August 1st:
-    <a href="https://www.openbsd.org/advisories/ssh_trojan.txt">OpenBSD Advisory</a>.
+    <a href="https://www.openbsd.org/advisories/ssh_trojan.txt">
+    OpenBSD Advisory</a>.
 
 <li><p><b>26 июня 2002:</b><br>
     OpenSSH 3.4 and newer are not vulnerable to
     "June 26, 2002: OpenSSH Remote Challenge Vulnerability",
-    <a href="https://www.openssh.com/txt/preauth.adv">OpenSSH
-    Security Advisory</a>.
+    <a href="https://www.openssh.com/txt/preauth.adv">
+    OpenSSH Security Advisory</a>.
 
 <li><p><b>29 марта 2002:</b><br>
     OpenSSH 3.2.1 and newer are not vulnerable to
     "April 21, 2002: Buffer overflow in AFS/Kerberos token passing code",
-    <a href="https://www.openbsd.org/advisories/ssh_afstoken.txt">OpenSSH
-    Security Advisory</a>:
+    <a href="https://www.openbsd.org/advisories/ssh_afstoken.txt">
+    OpenSSH Security Advisory</a>:
     Versions prior to OpenSSH 3.2.1 allow privileged access if
     AFS/Kerberos token passing is compiled in and enabled (either
     in the system or in sshd_config).
@@ -325,8 +327,8 @@ OpenSSH разрабатывается по тем же принципам и т
 <li><p><b>7 марта 2002:</b><br>
     OpenSSH 3.1 and newer are not vulnerable to
     "March 7, 2002: Off-by-one error in the channel code",
-    <a href="https://www.openbsd.org/advisories/ssh_channelalloc.txt">OpenSSH
-    Security Advisory</a>.
+    <a href="https://www.openbsd.org/advisories/ssh_channelalloc.txt">
+    OpenSSH Security Advisory</a>.
 
 <li><p><b>24 ноября 2001:</b><br>
     OpenSSH 3.0.2 and newer do not
@@ -338,8 +340,8 @@ OpenSSH разрабатывается по тем же принципам и т
     OpenSSH 2.9.9 and newer are not vulnerable to
     "Sep 26, 2001: Weakness in OpenSSH's source IP based access control
     for SSH protocol v2 public key authentication.",
-    <a href="https://www.openbsd.org/advisories/ssh_option.txt">OpenSSH
-    Security Advisory</a>.
+    <a href="https://www.openbsd.org/advisories/ssh_option.txt">
+    OpenSSH Security Advisory</a>.
 
 <li><p><b>21 мая 2001:</b><br>
     OpenSSH 2.9.9 and newer do not
@@ -351,8 +353,8 @@ OpenSSH разрабатывается по тем же принципам и т
     OpenSSH 2.3.1, a development snapshot which was never released, was
     vulnerable to
     "Feb 8, 2001: Authentication By-Pass Vulnerability in OpenSSH-2.3.1",
-    <a href="https://www.openbsd.org/advisories/ssh_bypass.txt">OpenBSD
-    Security Advisory</a>.
+    <a href="https://www.openbsd.org/advisories/ssh_bypass.txt">
+    OpenBSD Security Advisory</a>.
     In protocol 2, authentication could be bypassed if public key
     authentication was permitted. This problem does exist only
     in OpenSSH 2.3.1, a three week internal development release.
@@ -368,7 +370,8 @@ OpenSSH разрабатывается по тем же принципам и т
 <li><p><b>6 ноября 2000:</b><br>
     OpenSSH 2.3.0 and newer are not vulnerable to the
     "Feb 8, 2001: SSH-1 Daemon CRC32 Compensation Attack Detector Vulnerability",
-    <a href="http://razor.bindview.com/publish/advisories/adv_ssh1crc.html">RAZOR Bindview Advisory CAN-2001-0144</a>.
+    <a href="http://razor.bindview.com/publish/advisories/adv_ssh1crc.html">
+    RAZOR Bindview Advisory CAN-2001-0144</a>.
     A buffer overflow in the CRC32 compensation attack detector can
     lead to remote root access.  This problem has been fixed in
     OpenSSH 2.3.0.  However, versions prior to 2.3.0 are vulnerable.
@@ -422,7 +425,7 @@ OpenSSH разрабатывается по тем же принципам и т
 
 <li><p>OpenSSH has the SSH 1 protocol deficiency that might make an insertion attack
     difficult but possible.  The CORE-SDI
-    <a href="http://www2.corest.com/common/showdoc.php?idx=131&amp;idxseccion=10">deattack mechanism</a>
-    is used to eliminate
+    <a href="http://www2.corest.com/common/showdoc.php?idx=131&amp;idxseccion=10">
+    deattack mechanism</a> is used to eliminate
     the common case. SSH 1 protocol support is disabled by default.
 </ul>
