[1.757] OpenBSD 7.3 released - index.html

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 <article>
 
 <h2>
-	<a href="https://www.openbsd.org/72.html">
-	<img src="images/puffy72.gif" height=198 width=599 alt="[OpenBSD 7.2]">
+	<a href="https://www.openbsd.org/73.html">
+	<img src="images/puffy73.gif" alt="[OpenBSD 7.3]" height=198 width=599>
 	</a>
 </h2>
 
@@ -94,8 +94,8 @@ OpenBSD доступна для скачивания с нашей
 
 <p>
 Последняя версия,
-<a href="https://www.openbsd.org/72.html">OpenBSD 7.2</a>,
-вышла 20 октябтя 2022 года. Это 53'й релиз.
+<a href="https://www.openbsd.org/73.html">OpenBSD 7.3</a>,
+вышла 10 апреля 2023 года. Это 54'й релиз.
 
 <p>
 OpenBSD разрабатывается добровольцами. Процесс разработки,
