--- a/faq/faq4.html
+++ b/faq/faq4.html
@@ -111,19 +111,19 @@ boot> <b>boot hd1d:/bsd.rd</b>
 	  если вы используете одну из архитектур, отличных от x86. Они содержат
 	  подробные инструкции и предостережения:
           <p>
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/alpha/INSTALL.alpha">alpha</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/amd64/INSTALL.amd64">amd64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/arm64/INSTALL.arm64">arm64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/armv7/INSTALL.armv7">armv7</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/hppa/INSTALL.hppa">hppa</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/i386/INSTALL.i386">i386</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/landisk/INSTALL.landisk">landisk</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/loongson/INSTALL.loongson">loongson</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/luna88k/INSTALL.luna88k">luna88k</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/macppc/INSTALL.macppc">macppc</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/octeon/INSTALL.octeon">octeon</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/powerpc64/INSTALL.powerpc64">powerpc64</a>]
-[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/sparc64/INSTALL.sparc64">sparc64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/alpha/INSTALL.alpha">alpha</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/amd64/INSTALL.amd64">amd64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/arm64/INSTALL.arm64">arm64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/armv7/INSTALL.armv7">armv7</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/hppa/INSTALL.hppa">hppa</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/i386/INSTALL.i386">i386</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/landisk/INSTALL.landisk">landisk</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/loongson/INSTALL.loongson">loongson</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/luna88k/INSTALL.luna88k">luna88k</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/macppc/INSTALL.macppc">macppc</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/octeon/INSTALL.octeon">octeon</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/powerpc64/INSTALL.powerpc64">powerpc64</a>]
+[<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/sparc64/INSTALL.sparc64">sparc64</a>]
       <li>Если досуп к сети в вашем случае возможен только через wireless, узнайте
 	  заранее, требует ли ваша карта firmware?
 	  Если это так, ознакомьтесь с материалом <a href="#WifiOnly">bootstrapping wireless firmware</a>.
@@ -138,7 +138,7 @@ boot> <b>boot hd1d:/bsd.rd</b>
       <li>Будет ли использоваться весь диск для OpenBSD, или вы хотите использовать
         существующую разметку и использовать один из доступных разделов?
       <li>Как вы хотите разметить часть диска, предназначенного для OpenBSD?
-      <li>Хотите ли <a href="faq14.html#softraidFDE">зашифровать диск</a>?
+      <li>Хотите ли зашифровать диск?
     </ul>
   <li>Настройка сети, если не используется DHCP:
     <ul>
@@ -156,76 +156,76 @@ boot> <b>boot hd1d:/bsd.rd</b>
 
 <tr>
 <td>
-<b>install72.img</b>
+<b>install73.img</b>
 <td>
 Образ диска, который может быть записан на USB флешку или подобное устройство.
 Содержит <a href="#FilesNeeded">установочные компоненты</a>.
 <hr>
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/amd64/install72.img">amd64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/arm64/install72.img">arm64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/i386/install72.img">i386</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/octeon/install72.img">octeon</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/powerpc64/install72.img">powerpc64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/riscv64/install72.img">riscv64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/sparc64/install72.img">sparc64</a>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/amd64/install73.img">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/arm64/install73.img">arm64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/i386/install73.img">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/octeon/install73.img">octeon</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/powerpc64/install73.img">powerpc64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/riscv64/install73.img">riscv64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/sparc64/install73.img">sparc64</a>
 
 <tr>
 <td>
-<b>miniroot72.img</b>
+<b>miniroot73.img</b>
 <td>
 Это такой же образ, как и выше, но без установочных компонентов.
 Они могут быть загружены из интернет или c диска.
 <hr>
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/alpha/miniroot72.img">alpha</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/amd64/miniroot72.img">amd64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/arm64/miniroot72.img">arm64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/alpha/miniroot73.img">alpha</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/amd64/miniroot73.img">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/arm64/miniroot73.img">arm64</a> |
 <!-- armv7 has multiple miniroot files for different boards -->
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/armv7/">armv7</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/i386/miniroot72.img">i386</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/landisk/miniroot72.img">landisk</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/luna88k/miniroot72.img">luna88k</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/octeon/miniroot72.img">octeon</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/powerpc64/miniroot72.img">powerpc64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/riscv64/miniroot72.img">riscv64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/sparc64/miniroot72.img">sparc64</a>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/armv7/">armv7</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/i386/miniroot73.img">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/landisk/miniroot73.img">landisk</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/luna88k/miniroot73.img">luna88k</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/octeon/miniroot73.img">octeon</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/powerpc64/miniroot73.img">powerpc64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/riscv64/miniroot73.img">riscv64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/sparc64/miniroot73.img">sparc64</a>
 
 <tr>
 <td>
-<b>install72.iso</b>
+<b>install73.iso</b>
 <td>
 ISO 9660 образ. Используется для создания установочных CD/DVD.
 Содержит установочные компоненты.
 <hr>
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/alpha/install72.iso">alpha</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/amd64/install72.iso">amd64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/hppa/install72.iso">hppa</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/i386/install72.iso">i386</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/macppc/install72.iso">macppc</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/powerpc64/install72.iso">powerpc64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/sparc64/install72.iso">sparc64</a>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/alpha/install73.iso">alpha</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/amd64/install73.iso">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/hppa/install73.iso">hppa</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/i386/install73.iso">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/macppc/install73.iso">macppc</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/powerpc64/install73.iso">powerpc64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/sparc64/install73.iso">sparc64</a>
 
 <tr>
 <td>
-<b>cd72.iso</b>
+<b>cd73.iso</b>
 <td>
 Такой же образ как и выше, но без установочных компоненов.
 <hr>
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/alpha/cd72.iso">alpha</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/amd64/cd72.iso">amd64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/hppa/cd72.iso">hppa</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/i386/cd72.iso">i386</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/macppc/cd72.iso">macppc</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/sparc64/cd72.iso">sparc64</a>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/alpha/cd73.iso">alpha</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/amd64/cd73.iso">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/hppa/cd73.iso">hppa</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/i386/cd73.iso">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/macppc/cd73.iso">macppc</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/sparc64/cd73.iso">sparc64</a>
 
 <tr>
 <td>
-<b>floppy72.img</b>
+<b>floppy73.img</b>
 <td>
 Поддерживает некоторые старые машины, где отсутствуют другие возможности для загрузки.
 <hr>
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/amd64/floppy72.img">amd64</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/i386/floppy72.img">i386</a> |
-<a href="https://cdn.openbsd.org/pub/OpenBSD/7.2/sparc64/floppy72.img">sparc64</a>
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/amd64/floppy73.img">amd64</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/i386/floppy73.img">i386</a> |
+<a href="https://cdn.openbsd.org/pub/OpenBSD/7.3/sparc64/floppy73.img">sparc64</a>
 
 </table>
 
@@ -240,14 +240,14 @@ ISO 9660 образ. Используется для создания устан
 
 <pre class="cmdbox">
 $ <b>sha256 -C SHA256 miniroot*.img</b>
-(SHA256) miniroot72.img: OK
+(SHA256) miniroot73.img: OK
 </pre>
 
 Если же вы используете ОС с GNU coreutils:
 
 <pre class="cmdbox">
 $ <b>sha256sum -c --ignore-missing SHA256</b>
-miniroot72.img: OK
+miniroot73.img: OK
 </pre>
 
 Однако это используется лишь для проверки <i>правильной загрузки</i> файлов по сети.
@@ -256,18 +256,18 @@ miniroot72.img: OK
 контрольные суммы.
 
 <pre class="cmdbox">
-$ <b>signify -Cp /etc/signify/openbsd-72-base.pub -x SHA256.sig miniroot*.img</b>
+$ <b>signify -Cp /etc/signify/openbsd-73-base.pub -x SHA256.sig miniroot*.img</b>
 Signature Verified
-miniroot72.img: OK
+miniroot73.img: OK
 </pre>
 
 Обратите внимание, что пакет signify в других операционных системах может не
 содержать требуемого
-<a href="https://ftp.openbsd.org/pub/OpenBSD/7.2/openbsd-72-base.pub">открытого ключа</a>
+<a href="https://ftp.openbsd.org/pub/OpenBSD/7.3/openbsd-73-base.pub">открытого ключа</a>
 или быть установлен в другое место.
 
 <p>
-Образы <code>install72.iso</code> и <code>install72.img</code> не содержат файл
+Образы <code>install73.iso</code> и <code>install73.img</code> не содержат файл
 <code>SHA256.sig</code>, поэтому установщик пожалуется, что не может проверить
 подпись включенных файлов, которые содержат установочные компоненты:
 
@@ -336,7 +336,7 @@ Directory does not contain SHA256.sig. Continue without verification? [no]
 root on rd0a swap on rd0b dump on rd0b
 erase ^?, werase ^W, kill ^U, intr ^C, status ^T
 
-Welcome to the OpenBSD/amd64 7.2 installation program.
+Welcome to the OpenBSD/amd64 7.3 installation program.
 (I)nstall, (U)pgrade, (A)utoinstall or (S)hell?
 </pre>
 
@@ -358,29 +358,29 @@ Welcome to the OpenBSD/amd64 7.2 installation program.
 	<td><code>bsd.rd</code>
 	<td><a href="#bsd.rd">ramdisk ядро</a>
 <tr>
-	<td><code>base72.tgz</code>
+	<td><code>base73.tgz</code>
 	<td>Базовая система <strong>(обязательно для установки)</strong>
 <tr>
-	<td><code>comp72.tgz</code>
+	<td><code>comp73.tgz</code>
 	<td>Компиляторы, заголовочные файлы (headers) и библиотеки
 <tr>
-	<td><code>man72.tgz</code>
+	<td><code>man73.tgz</code>
 	<td>Справочные man-страницы
 <tr>
-	<td><code>game72.tgz</code>
+	<td><code>game73.tgz</code>
 	<td>Консольные игры (text-based games)
 <tr>
-	<td><code>xbase72.tgz</code>
+	<td><code>xbase73.tgz</code>
 	<td>Основные библиотеки и утилиты для X11
-		(требует <code>xshare72.tgz</code>)
+		(требует <code>xshare73.tgz</code>)
 <tr>
-	<td><code>xfont72.tgz</code>
+	<td><code>xfont73.tgz</code>
 	<td>Шрифты, используемые X11
 <tr>
-	<td><code>xserv72.tgz</code>
+	<td><code>xserv73.tgz</code>
 	<td>X серверы X11
 <tr>
-	<td><code>xshare72.tgz</code>
+	<td><code>xshare73.tgz</code>
 	<td>Справочные man-страницы, конфиги и заголовочные файлы для X11
 </table>
 
@@ -388,12 +388,12 @@ Welcome to the OpenBSD/amd64 7.2 installation program.
 Новым пользователям рекомендуется установить все эти компоненты.
 
 <p>
-Некоторые библиотеки из <code>xbase72.tgz</code>, такие как freetype или
+Некоторые библиотеки из <code>xbase73.tgz</code>, такие как freetype или
 fontconfig, используются программами для работы с текстом или графикой и без X.
-Такие программы обычно нуждаются в шрифтах из <code>xfont72.tgz</code>
+Такие программы обычно нуждаются в шрифтах из <code>xfont73.tgz</code>
 или пакетов со шрифтами.
 Для простоты разработчики решили не поддерживать минимальный компонент
-<code>xbase72.tgz</code>, который позволял бы работать большинству не-X портов.
+<code>xbase73.tgz</code>, который позволял бы работать большинству не-X портов.
 
 <h3>Добавление компоненты после установки</h3>
 
@@ -490,10 +490,10 @@ vnode при помощи <a href="https://man.openbsd.org/vnconfig">vnconfig(8)
 <a href="https://man.openbsd.org/iwm">iwm(4)</a>:
 
 <pre class="cmdbox">
-# <b>vnconfig install72.img</b>
+# <b>vnconfig install73.img</b>
 vnd0
 # <b>mount /dev/vnd0a /mnt</b>
-# <b>fw_update -Fv -p/mnt iwm</b>
+# <b>fw_update -Fv -p /mnt iwm</b>
 # <b>umount /mnt</b>
 # <b>vnconfig -u vnd0</b>
 </pre>
@@ -554,28 +554,28 @@ $ <b>(dmesg; sysctl hw.sensors) > ~/dmesg.txt</b>
 
 <h2 id="site">Настройка процесса установки</h2>
 
-<h3>Компонент <code>site72.tgz</code></h3>
+<h3>Компонент <code>site73.tgz</code></h3>
 
 Скрипты установки и обновления OpenBSD позволяют выбирать установленные
-пользователем настройки, называемые <code>site72.tgz</code>.
+пользователем настройки, называемые <code>site73.tgz</code>.
 Как и официальные <a href="#FilesNeeded">копоненты установки</a>, это
 <a href="https://man.openbsd.org/tar">tar(1)</a> архив, распаковывапющийся в
 корень ФС <code>/</code> и при помощи опций <code>-xzphf</code>.
 Он распаковается последним, поэтому отлично подходит для изменения файлов,
 которые присутствуют в системе после установки.
 Кроме того, можно использовать компоненты, зависящие лишь от имени хоста,
-при использовании имени <code>site72-$(hostname -s).tgz</code>.
+при использовании имени <code>site73-$(hostname -s).tgz</code>.
 
 <p>
 <b>Заметка:</b>
 Если вы хотите использовать установочные компоненты, загружая их через HTTP(s),
-поместите <code>site72.tgz</code> в каталог, откуда будете загружать архив,
+поместите <code>site73.tgz</code> в каталог, откуда будете загружать архив,
 и добавьте его имя в ваш  <code>index.txt</code>.
 Этот компонент будет доступен во время установки системы.
 
 <h3>Скрипты <code>install.site</code> и <code>upgrade.site</code></h3>
 
-Если компонент <code>site72.tgz</code> содержит файл <code>/install.site</code>,
+Если компонент <code>site73.tgz</code> содержит файл <code>/install.site</code>,
 установщик запустит его при помощи
 <a href="https://man.openbsd.org/chroot">chroot(8)</a>, в только что созданный
 для установки корень ФС.
