[1.336] sync, 7.3 update- faq/faq5.html

--- a/faq/faq5.html
+++ b/faq/faq5.html
@@ -35,11 +35,11 @@ FAQ - Собираем систему из исходников
 Существует три flavors (разновидности, ветки) OpenBSD:
 
 <ul>
-  <li><b>-release:</b> Ветка (релиз) OpenBSD, выпускаемая каждые шесть месяцев.
+  <li><b>release:</b> Ветка (релиз) OpenBSD, выпускаемая каждые шесть месяцев.
   <li><b>-current:</b> Разрабатываемая ветка или версия.
       Каждые шесть месяцев -current замораживается, и эта ветка становится
-      следующим -release.
-  <li><b>-stable:</b> Ветка -release, плюс патчи, которые перечисленны на
+      следующим release.
+  <li><b>-stable:</b> Ветка release, плюс патчи, которые перечисленны на
       <a href="../errata.html">странице errata</a>.
       Самые важные исправления, сделанные для -current, так же добавляются (backported)
       во все поддерживаемые -stable ветки.
@@ -50,7 +50,7 @@ FAQ - Собираем систему из исходников
 для базовой части ОС (base system).
 
 <p>
-Большинству пользователей рекомендуется использовать либо -stable либо -release.
+Большинству пользователей рекомендуется использовать либо -stable либо release.
 Как уже было сказано, многие пользователи используют -current, и, что очень важно,
 некоторые делают это для обнаружения ошибок и тестирования новых возможностей и
 функциональности.
@@ -103,7 +103,7 @@ snapshot.
 
 <p>
 Проверьте и убедитесь, что у вас установлена самая последняя доступная
-версия системы. Это должна быть либо OpenBSD x.y-release, если вы хотите
+версия системы. Это должна быть либо OpenBSD x.y, если вы хотите
 обновиться до OpenBSD x.y-stable, либо последний snapshot, если вы хотите
 обновиться до -current.
 
@@ -163,7 +163,7 @@ OpenBSD использует систему контроля версий
 
 <pre class="cmdbox">
 $ <b>cd /usr</b>
-$ <b>cvs -qd anoncvs@anoncvs.example.org:/cvs checkout -rOPENBSD_7_2 -P src</b>
+$ <b>cvs -qd anoncvs@anoncvs.example.org:/cvs checkout -rOPENBSD_7_3 -P src</b>
 </pre>
 
 После того как вы загрузили исходники, вы можете обновить/синхронизировать
@@ -171,7 +171,7 @@ $ <b>cvs -qd anoncvs@anoncvs.example.org:/cvs checkout -rOPENBSD_7_2 -P src</b>
 
 <pre class="cmdbox">
 $ <b>cd /usr/src</b>
-$ <b>cvs -q up -Pd -rOPENBSD_7_2</b>
+$ <b>cvs -q up -Pd -rOPENBSD_7_3</b>
 </pre>
 
 Замените <code>src</code> на <code>xenocara</code> или <code>ports</code>
@@ -336,7 +336,7 @@ swap /dest mfs rw,nosuid,noperm,-P/var/dest,-s1.5G,noauto 0 0
 
 Чаще всего к проблемам при сборке приводит невнимательность.
 Есть отдельные проблемы при сборке -current из-за новых изменений коде,
-но проблемы при сборке -release или -stable чаще всего вызваны ошибками
+но проблемы при сборке release или -stable чаще всего вызваны ошибками
 самого пользователя.
 
 <p>
