[1.300] sync - faq/faq10.html

--- a/faq/faq10.html
+++ b/faq/faq10.html
@@ -86,10 +86,11 @@ Securtiy исправления для для third party ПО, установл
 <ul>
   <li><b>Использование бинарных пакетов</b> (доступно для amd64, arm64, i386, sparc64)
     <br>
-    Бинарные пакеты для -stable пересобираются только в случае найденных проблем
-    безопасности или необходимости использования других серьезных исправлений.
+    Бинарные пакеты для release и stable пересобираются только в случае найденных
+    и исправленных в них проблем с безопасностью или необходимости использования
+    других серьезных исправлений.
     Просто запустите <a href="https://man.openbsd.org/pkg_add">pkg_add(1)</a>
-    с флагом <code>-u</code>, чтобы загрузить себе новые файлы.
+    с флагом <code>-u</code>, чтобы загрузить себе новые (бинарные) файлы.
     <p>
   <li><b>Использование дерева портов -stable</b>
     <br>
