--- a/ftp.html
+++ b/ftp.html
@@ -44,7 +44,7 @@
 	доступна коллекция FTP OpenBSD. Это может быть ссылкой, если
 	это необходимо.
 	<p>
-<li><b>/pub/OpenBSD/7.2/</b><br>
+<li><b>/pub/OpenBSD/7.3/</b><br>
 	Где можно найти последний релиз.
   <ul>
   <!-- XXXrelease - make sure platform list is current -->
@@ -61,7 +61,7 @@
   <li><b>octeon/</b>
   <li><b>packages/</b><br>
 	Бинарные пакеты (скомпилированные порты) для установки в
-	-release или -stable системах.
+	release или -stable системах.
   <li><b>powerpc64/</b>
   <li><b>riscv64/</b>
   <li><b>sparc64/</b>
@@ -83,8 +83,8 @@
 <li><b>/pub/OpenBSD/tools/</b><br>
 	Другое различные маленькие вещи.
 <p>
-<li><b>/pub/OpenBSD/7.1/</b><br>
-	Такая же структура каталогов как и для релиза 7.2, описанного выше.
+<li><b>/pub/OpenBSD/7.2/</b><br>
+	Такая же структура каталогов как и для релиза 7.3, описанного выше.
 </ul>
 
 <h3 id="prospective">Информация для планируемых/поддерживаемых Зеркал</h3>
