[1.66] 7.3 update - faq/pf/carp.html

--- a/faq/pf/carp.html
+++ b/faq/pf/carp.html
@@ -170,8 +170,10 @@ pass out on $carp_dev proto carp
     группу <code>carp</code>.
     Каждая группа имеет счетчик <code>carpdemote</code>, влияющий
     на все carp(4) интерфейсы, принадлежащие этой группе.
-    Как будет описано ниже, может быть полезно сгруппировать определенные
-    интерфейсы вместе с целью отработки форс-мажорных ситуаций.
+    Если один CARP-интерфейс выйдет из строя, CARP увеличит счетчик
+    понижения уровня на 1 в группах интерфейсов, членом которых
+    является интерфейс carp(4), в результате чего все члены группы
+    будут переключаться при сбое одновременно.
 
 <p>
 <dt><code><i>ipaddress</i></code>
@@ -198,13 +200,6 @@ pass out on $carp_dev proto carp
 <dt><code>net.inet.carp.preempt</code>
 <dd>Разрешить хостам в резервной группе, которые имеют лучшие
     <code>advbase</code> и <code>advskew</code>, заменить мастера.
-    Кроме того, эта опция также позволяет переключать группы
-    интерфейсов в случае сбоя одного интерфейса.
-    Если один физический интерфейс с поддержкой CARP выйдет из строя,
-    CARP увеличит счетчик понижений, <code>carpdemote</code>,
-    на 1 в группах интерфейсов, членом которых является carp(4) интерфейс,
-    что фактически приведет к аварийному переключению всех членов
-    группы вместе.
     Значение <code>net.inet.carp.preempt</code> равно 0 (отключено) по умолчанию.
 
 <p>
