[1.66] OpenSMTPD 7.3.0p0 - opensmtpd/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -40,12 +40,10 @@
 </h2>
 
 <p id="callout">
-Релиз <a href="https://www.opensmtpd.org/announces/release-6.7.0p1.txt">OpenSMTPD 6.7</a>
-состоялся 19 мая 2020 года.<br>
-Последний minor релиз:
-<a href="https://www.opensmtpd.org/archives/opensmtpd-6.7.1p1.tar.gz">OpenSMTPD 6.7.1p1</a>
-[<a href="https://www.opensmtpd.org/archives/opensmtpd-6.7.1p1.sum.sig">sha256</a>]
-состоялся 21 мая 2020 года.
+Релиз <a href="https://www.opensmtpd.org/announces/release-7.3.0p0.txt">OpenSMTPD 7.3</a>
+состоялся 17 июня 2023 года<br>
+<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p0.tar.gz">Портированная версия</a>
+[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p0.sum.sig">sha256</a>]
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong>
