[1.137] LibreSSL 3.7.3 - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -40,8 +40,8 @@
 </h2>
 
 <p id="callout">
-<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.7.2-relnotes.txt">LibreSSL 3.7.2</a>
-вышла 8 апреля 2023 года
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/libressl-3.7.3-relnotes.txt">LibreSSL 3.7.3</a>
+вышла 27 мая 2023 года
 
 <p>
 LibreSSL представляет из себя криптографический TLS-стек,
@@ -57,7 +57,8 @@ LibreSSL представляет из себя криптографически
 для других ОС (Linux, FreeBSD, Windows, и.т.д.).
 
 <p>
-Последним stable релизом является 3.7.2<br>
+Последним stable релизом является 3.7.3<br>
+Последним development релизом является 3.8.0<br>
 Больше информации можно найти на странице
 <a href="releases.html">доступных версий</a>.
 
