--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 8.3 вышла 19 марта 2023 года.
+Портированная версия rpki-client 8.4 вышла 2 мая 2023 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
