--- a/openbgpd/ftp.html
+++ b/openbgpd/ftp.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Релиз портированной версии OpenBGPD 7.8 состоялся 17 марта 2023 года.
+Релиз портированной версии OpenBGPD 8.0 состоялся 4 мая 2023 года.
 
 <p>
 Портированная OpenBGPD - это версия/порт для других операционных систем.
