[1.364] OpenSSH 9.3p2 release - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -50,8 +50,9 @@
 </h2>
  
 <p id="callout">
-Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.3">OpenSSH 9.3</a>
-состоялся 15 марта 2023 года.<br>
+
+Релиз <a href="https://www.openbsd.org/openssh/releasenotes.html#9.3p2">OpenSSH 9.3p2</a>
+состоялся 19 июля 2023 года
 
 <p>
 OpenSSH это основной инструмент для создания соединений
