[1.67] OpenSMTPD 7.3.0p1 minor release - opensmtpd/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -42,8 +42,10 @@
 <p id="callout">
 Релиз <a href="https://www.opensmtpd.org/announces/release-7.3.0p0.txt">OpenSMTPD 7.3</a>
 состоялся 17 июня 2023 года<br>
-<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p0.tar.gz">Портированная версия</a>
-[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p0.sum.sig">sha256</a>]
+Последний minor release
+<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p1.tar.gz">OpenSMTPD 7.3.0p1</a>
+[<a href="https://www.opensmtpd.org/archives/opensmtpd-7.3.0p1.sum.sig">sha256</a>]
+состоялся 30 июня 2023 года
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong>
